--- a/producer-metrics/pom.xml
+++ b/producer-metrics/pom.xml
@@ -8,21 +8,29 @@
         <artifactId>T1_MonitoringWithKafka</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <dependencies>
-        <dependency>
-            <groupId>ru.strebkov</groupId>
-            <artifactId>strebkov-public-lib</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
-    </dependencies>
 
     <artifactId>producer-metrics</artifactId>
-
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
