--- a/consumer-metrics/src/main/resources/application.yml
+++ b/consumer-metrics/src/main/resources/application.yml
@@ -3,7 +3,8 @@ spring:
     name: metrics-consumer
   jpa:
     hibernate:
-      ddl-auto: none
+    ddl-auto: none
+#    ddl-auto: update
     show-sql: true
     properties:
       hibernate:
